log
Thu, Mar 27, 2025  5:21:30 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Thu, Mar 27, 2025  5:24:56 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4615ac0
Thu, Mar 27, 2025  5:35:08 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
23838ad
Thu, Mar 27, 2025  5:35:55 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
7182a79
Thu, Mar 27, 2025  5:37:18 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:47:25: error: 'List {aka struct List}' has no member named 'next'
     list->current = list->next;
                         ^~
Compilation failed
82340e8
Thu, Mar 27, 2025  5:38:02 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
58297cd
Thu, Mar 27, 2025  5:41:03 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
b97377c
Thu, Mar 27, 2025  5:42:05 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
461526d
Thu, Mar 27, 2025  5:48:21 PM: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
5bbcd9e
Thu, Mar 27, 2025  5:51:21 PM: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  6|4
total_score: 25/70
9d3e682
Thu, Mar 27, 2025  5:58:00 PM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  7|4
total_score: 25/70
8b541a2
Thu, Mar 27, 2025  6:00:32 PM: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
fb875bb
Thu, Mar 27, 2025  6:02:00 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
e7cf905
Thu, Mar 27, 2025  6:03:38 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
e4d1c1c
Thu, Mar 27, 2025  6:05:59 PM: 
 list.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  7|4
total_score: 25/70
08bdde0
Thu, Mar 27, 2025  6:07:18 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 25/70
86c7155
Thu, Mar 27, 2025  6:08:02 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 25/70
8af7fc3
